// Copyright 2019 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/timestamp.proto";

service notification {
	rpc CreateNfWithAddrs (CreateNfWithAddrsRequest) returns (CreateNfWithAddrsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "#API 1.CreateNfWithAddrsï¼šcreate notification with addrs(email addrs, phone numbers)."
		};
		option (google.api.http) = {
			post: "/v1/notifications"
			body: "*"
		};
	}

	//#API 2.DescribeNfs
	rpc DescribeNfs (DescribeNfsRequest) returns (DescribeNfsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "#API 2.DescribeNfs:describe single Notification with filter."
		};
		option (google.api.http) = {
			get: "/v1/notifications"
		};
	}
}

message CreateNfWithAddrsRequest {
	google.protobuf.StringValue content_type = 1;
	google.protobuf.StringValue sent_type = 2;
	google.protobuf.StringValue addrs_str = 3;
	google.protobuf.StringValue title = 4;
	google.protobuf.StringValue content = 5;
	google.protobuf.StringValue short_content = 6;
	google.protobuf.StringValue expired_days = 7;
	google.protobuf.StringValue owner = 8;
	google.protobuf.StringValue status = 9;
}

message CreateNfWithAddrsResponse {
	google.protobuf.StringValue notification_id = 1;
}

message DescribeNfsRequest {
	repeated string content_type = 1;
	repeated string sent_type = 2;
	google.protobuf.StringValue title = 3;
	google.protobuf.StringValue content = 4;
	google.protobuf.StringValue owner = 5;
	google.protobuf.StringValue userids_str = 6;
	repeated string status = 7;
	uint32 limit = 8; // NOTE: uint64 marshal to json will convert to string
	uint32 offset = 9;
	google.protobuf.StringValue sort_key = 10;
}

message DescribeNfsResponse {
	string message = 1;
}

message Notification {
	google.protobuf.StringValue notification_id = 1;
	google.protobuf.StringValue content_type = 2;
	google.protobuf.StringValue sent_type = 3;
	google.protobuf.StringValue title = 4;
	google.protobuf.StringValue content = 5;
	google.protobuf.StringValue short_content = 6;
	google.protobuf.StringValue expired_days = 7;
	google.protobuf.StringValue status = 8;
	google.protobuf.Timestamp create_time = 9;
	google.protobuf.Timestamp status_time = 10;
	google.protobuf.StringValue owner = 11;
}
